// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer 1`] = `Object {}`;

exports[`reducer 2`] = `
Object {
  "AVgAgC1Vdo07z3PUnnkt": Object {
    "date": "2016-10-26T12:17:29+0200",
    "events": Array [
      "AVkWNYNYr4pSN7TrXcjY",
    ],
    "key": "AVgAgC1Vdo07z3PUnnkt",
  },
  "AVgFqeOSKpGuA48ADATE": Object {
    "date": "2016-10-27T12:21:15+0200",
    "events": Array [],
    "key": "AVgFqeOSKpGuA48ADATE",
  },
  "AVgGkRvCrrTJiPpCD-rG": Object {
    "date": "2016-10-27T16:33:50+0200",
    "events": Array [
      "AVjUDBiSiXOcXjpycvde",
    ],
    "key": "AVgGkRvCrrTJiPpCD-rG",
  },
}
`;

exports[`reducer 3`] = `
Object {
  "AVgAgC1Vdo07z3PUnnkt": Object {
    "date": "2016-10-26T12:17:29+0200",
    "events": Array [
      "AVkWNYNYr4pSN7TrXcjY",
    ],
    "key": "AVgAgC1Vdo07z3PUnnkt",
  },
  "AVgFqeOSKpGuA48ADATE": Object {
    "date": "2016-10-27T12:21:15+0200",
    "events": Array [],
    "key": "AVgFqeOSKpGuA48ADATE",
  },
  "AVgGkRvCrrTJiPpCD-rG": Object {
    "date": "2016-10-27T16:33:50+0200",
    "events": Array [
      "AVjUDBiSiXOcXjpycvde",
      "AVkWcQ8Hr4pSN7TrXcjZ",
    ],
    "key": "AVgGkRvCrrTJiPpCD-rG",
  },
}
`;

exports[`reducer 4`] = `
Object {
  "AVgAgC1Vdo07z3PUnnkt": Object {
    "date": "2016-10-26T12:17:29+0200",
    "events": Array [
      "AVkWNYNYr4pSN7TrXcjY",
    ],
    "key": "AVgAgC1Vdo07z3PUnnkt",
  },
  "AVgFqeOSKpGuA48ADATE": Object {
    "date": "2016-10-27T12:21:15+0200",
    "events": Array [],
    "key": "AVgFqeOSKpGuA48ADATE",
  },
  "AVgGkRvCrrTJiPpCD-rG": Object {
    "date": "2016-10-27T16:33:50+0200",
    "events": Array [
      "AVjUDBiSiXOcXjpycvde",
    ],
    "key": "AVgGkRvCrrTJiPpCD-rG",
  },
}
`;

exports[`reducer 5`] = `
Object {
  "AVgAgC1Vdo07z3PUnnkt": Object {
    "date": "2016-10-26T12:17:29+0200",
    "events": Array [
      "AVkWNYNYr4pSN7TrXcjY",
    ],
    "key": "AVgAgC1Vdo07z3PUnnkt",
  },
  "AVgGkRvCrrTJiPpCD-rG": Object {
    "date": "2016-10-27T16:33:50+0200",
    "events": Array [
      "AVjUDBiSiXOcXjpycvde",
    ],
    "key": "AVgGkRvCrrTJiPpCD-rG",
  },
}
`;
